--- a/hello-world/src/app/app.component.html
+++ b/hello-world/src/app/app.component.html
@@ -1,6 +1,54 @@
-<!-- <app-favorite
+<!-- 
+      FAVORITE ICON IMPLEMENTATION 
+
+  <app-favorite
   [isFavorite]="post.isFavorite"
   (change)="onFavoriteChanged($event)"
-></app-favorite> -->
+></app-favorite> 
+
+-->
+
+<!--
+        TWEETER LIKE/DISLIKE IMPLEMENTATION
 
 <app-like [likeCount]="tweet.likeCount" [isActive]="tweet.isActive"> </app-like>
+
+-->
+
+<!--
+        *ngIf and ng-template 
+
+<div *ngIf="courses.length > 0; then coursesList; else noCourses"></div>
+
+<ng-template #coursesList>List of Courses</ng-template>
+<ng-template #noCourses>No Courses Yet</ng-template>
+
+-->
+
+<!--  
+        *ngSwitchCase
+
+<ul class="nav nav-pills">
+  <li [class.active]="viewMode == 'map'">
+    <a (click)="viewMode = 'map'">Map View</a>
+  </li>
+  <li [class.active]="viewMode == 'list'">
+    <a (click)="viewMode = 'list'">List View</a>
+  </li>
+</ul>
+
+<div [ngSwitch]="viewMode">
+  <div *ngSwitchCase="'map'">Map View Component</div>
+  <div *ngSwitchCase="'list'">List View Component</div>
+  <div *ngSwitchDefault>Other Component</div>
+</div>
+
+-->
+
+<!--
+              Custom Directive
+
+<input type="text" appInputFormat [format]="'uppercase'" />
+-->
+
+<zippy title="Shipping Details"> Shipping Details Content </zippy>
