--- a/hello-world/src/app/favorite/favorite.component.html
+++ b/hello-world/src/app/favorite/favorite.component.html
@@ -4,3 +4,12 @@
   [class.glyphicon-star-empty]="!isSelected"
   (click)="onClick()"
 ></span>
+<!-- Same can be achieved using ngClass as shown below-->
+<span
+  class="glyphicon"
+  [ngClass]="{
+    'glyphicon-star': isSelected,
+    'glyphicon-star-empty': !isSelected
+  }"
+  (click)="onClick()"
+></span>
