--- a/hello-world/src/app/app.component.html
+++ b/hello-world/src/app/app.component.html
@@ -51,4 +51,12 @@
 <input type="text" appInputFormat [format]="'uppercase'" />
 -->
 
+<!--
+
+              Zippy Component
+
 <zippy title="Shipping Details"> Shipping Details Content </zippy>
+
+-->
+
+<contact-form></contact-form>
